--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>National Girlfriend Day ❤️</title>
+    <title>Wedding Countdown ❤️</title>
     <style>
         body {
             margin: 0;
